fix spacing issues on mobile

--- a/travel/style.css
+++ b/travel/style.css
@@ -172,7 +172,6 @@ input[type="checkbox"]{
 .checkboxField{
   align-self: stretch;
   justify-content: center;
-  padding-top: 22px;
 }
 
 .checkboxLabel{
